src/controllers/trustpub/github_configs/delete/snapshots/crates_io__controllers__trustpub__github_configs__delete__tests__token_auth_with_trusted_publishing_scope-2.snap
---
source: src/controllers/trustpub/github_configs/delete/tests.rs
expression: app.emails_snapshot().await
---
To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Trusted Publishing configuration removed from foo
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Hello foo!

You removed a "Trusted Publishing" configuration for GitHub Actions from your crate "foo".

The removed configuration was for the workflow file at https://github.com/rust-lang/foo-rs/blob/HEAD/.github/workflows/publish.yml.

If you did not make this change and you think it was made maliciously, you can email help@crates.io for assistance.

--
The crates.io Team
